敵を追加。横に動くだけ。

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -31,11 +31,17 @@
 @星_個数は整数型 = 5
 @星は星型[] = 新しい星型[@星_個数]
 
+@敵_個数は整数型 = 5
+@敵は敵型[] = 新しい敵型[@敵_個数]
+
 ---初期設定する{
     {幅:300, 高さ:300}のサイズ
     輪郭なし
     {開始:@iは整数型 = 0 , 条件:@i < @星_個数 ,変化:@i += 1}のくりかえし{
         @星[@i] = 新しい星型
+    }
+    {開始:@iは整数型 = 0 , 条件:@i < @敵_個数 ,変化:@i += 1}のくりかえし{
+        @敵[@i] = 新しい敵型
     }
 }
 
@@ -44,6 +50,10 @@
     {開始:@iは整数型 = 0 , 条件:@i < @星_個数 ,変化:@i += 1}のくりかえし{
         @星[@i]を移動する
         @星[@i]を描く
+    }
+    {開始:@iは整数型 = 0 , 条件:@i < @敵_個数 ,変化:@i += 1}のくりかえし{
+        @敵[@i]を移動する
+        @敵[@i]を描く
     }
 }
 
@@ -66,6 +76,34 @@
 
 ---描く{
     {x:@位置x, y:@位置y}に{幅:3, 高さ:3}のシカク
+  }
+
+---初期化する{
+    @位置x = @幅
+    @位置y = {上限：@高さ}の乱数
+    @速度 = {上限:1}の乱数 + 1
+  }
+}
+
+===敵型{
+   @位置xは実数型
+   @位置yは実数型
+
+   @速度は実数型
+
++++敵型{
+     初期化する
+  }
+
+---移動する{
+     @位置x -= @速度
+     もし{条件:@位置x <= 0}ならば{
+         初期化する
+     }
+  }
+
+---描く{
+    {x:@位置x, y:@位置y}に{幅:5, 高さ:5}のマル
   }
 
 ---初期化する{
