敵に、上下の動きを追加

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -85,20 +85,27 @@
   }
 }
 
+
 ===敵型{
    @位置xは実数型
    @位置yは実数型
 
-   @速度は実数型
+   @速度xは実数型
+   @速度yは実数型
+   @方向yは整数型
 
 +++敵型{
      初期化する
   }
 
 ---移動する{
-     @位置x -= @速度
+     @位置x -= @速度x
      もし{条件:@位置x <= 0}ならば{
          初期化する
+     }
+     @位置y += @方向y * @速度y
+     もし{条件:(@位置y >= @高さ) ||(@位置y <= 0)}ならば{
+         @方向y *= -1
      }
   }
 
@@ -109,7 +116,13 @@
 ---初期化する{
     @位置x = @幅
     @位置y = {上限：@高さ}の乱数
-    @速度 = {上限:1}の乱数 + 1
+    @速度x = {上限:2}の乱数 + 1
+    @速度y = {上限:1}の乱数 + 1
+
+    @方向y = 1
+    もし{条件:{上限:10}の乱数 > 5}ならば{
+         @方向y = -1
+    }
   }
 }
 </textarea><br />
