スタート画面を追加

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -28,7 +28,9 @@
 //Copyright 2012 Yutaka Kachi
 //MIT License
 
-@星_個数は整数型 = 5
+@開始フラグは正否型 = @否
+
+@星_個数は整数型 = 15
 @星は星型[] = 新しい星型[@星_個数]
 
 @敵_個数は整数型 = 5
@@ -43,9 +45,14 @@
     {開始:@iは整数型 = 0 , 条件:@i < @敵_個数 ,変化:@i += 1}のくりかえし{
         @敵[@i] = 新しい敵型
     }
+
+    {色:0}の背景色
+    {もじ:「Click to Start!」}で{X:@幅 / 3, Y:@高さ / 2}にもじ表示する
 }
 
 ---くり返し描画する{
+
+    もし{条件:@開始フラグ == @正}ならば{
     {色:0}の背景色
     {開始:@iは整数型 = 0 , 条件:@i < @星_個数 ,変化:@i += 1}のくりかえし{
         @星[@i]を移動する
@@ -55,6 +62,11 @@
         @敵[@i]を移動する
         @敵[@i]を描く
     }
+  }
+}
+
+---クリック時{
+    @開始フラグ = @正
 }
 
 ===星型{
@@ -84,7 +96,6 @@
     @速度 = {上限:1}の乱数 + 1
   }
 }
-
 
 ===敵型{
    @位置xは実数型
