--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -30,6 +30,9 @@
 
 @開始フラグは正否型 = @否
 
+@天井yは整数型
+@床面yは整数型
+
 @星_個数は整数型 = 15
 @星は星型[] = 新しい星型[@星_個数]
 
@@ -38,6 +41,9 @@
 
 ---初期設定する{
     {幅:300, 高さ:300}のサイズ
+    @天井y = 10
+    @床面y = @高さ - 10
+
     輪郭なし
     {開始:@iは整数型 = 0 , 条件:@i < @星_個数 ,変化:@i += 1}のくりかえし{
         @星[@i] = 新しい星型
@@ -92,7 +98,7 @@
 
 ---初期化する{
     @位置x = @幅
-    @位置y = {上限：@高さ}の乱数
+    @位置y = {下限:@天井y, 上限：@床面y}の乱数
     @速度 = {上限:1}の乱数 + 1
   }
 }
@@ -115,7 +121,7 @@
          初期化する
      }
      @位置y += @方向y * @速度y
-     もし{条件:(@位置y >= @高さ) ||(@位置y <= 0)}ならば{
+     もし{条件:(@位置y >= @床面y) ||(@位置y <= @天井y)}ならば{
          @方向y *= -1
      }
   }
@@ -126,7 +132,7 @@
 
 ---初期化する{
     @位置x = @幅
-    @位置y = {上限：@高さ}の乱数
+    @位置y = {下限:@天井y, 上限：@床面y}の乱数
     @速度x = {上限:2}の乱数 + 1
     @速度y = {上限:1}の乱数 + 1
 
