パラメータを調整

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -93,6 +93,8 @@
   }
 
 ---描く{
+    {色:255}の塗りつぶし色
+    輪郭なし
     {x:@位置x, y:@位置y}に{幅:3, 高さ:3}のシカク
   }
 
@@ -127,14 +129,16 @@
   }
 
 ---描く{
-    {x:@位置x, y:@位置y}に{幅:5, 高さ:5}のマル
+    塗りつぶしなし
+    {色:255}の輪郭色
+    {x:@位置x, y:@位置y}に{幅:20, 高さ:20}のマル
   }
 
 ---初期化する{
     @位置x = @幅
     @位置y = {下限:@天井y, 上限：@床面y}の乱数
-    @速度x = {上限:2}の乱数 + 1
-    @速度y = {上限:1}の乱数 + 1
+    @速度x = {上限:1}の乱数 + 1
+    @速度y = {上限:0.5}の乱数
 
     @方向y = 1
     もし{条件:{上限:10}の乱数 > 5}ならば{
