スタート時の星と敵の位置を分散させる。
いままでは、同じ位置からスタートして不自然だった。

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -41,10 +41,9 @@
 
 ---初期設定する{
     {幅:300, 高さ:300}のサイズ
-    @天井y = 10
-    @床面y = @高さ - 10
+    @天井y = 40
+    @床面y = @高さ - 60
 
-    輪郭なし
     {開始:@iは整数型 = 0 , 条件:@i < @星_個数 ,変化:@i += 1}のくりかえし{
         @星[@i] = 新しい星型
     }
@@ -52,14 +51,15 @@
         @敵[@i] = 新しい敵型
     }
 
-    {色:0}の背景色
-    {もじ:「Click to Start!」}で{X:@幅 / 3, Y:@高さ / 2}にもじ表示する
+    画面表示する
+    {もじ:「>Click to Start!」}で{X:@幅 / 3 + 10, Y:@高さ / 2}にもじ表示する
 }
 
 ---くり返し描画する{
 
     もし{条件:@開始フラグ == @正}ならば{
     {色:0}の背景色
+    画面表示する
     {開始:@iは整数型 = 0 , 条件:@i < @星_個数 ,変化:@i += 1}のくりかえし{
         @星[@i]を移動する
         @星[@i]を描く
@@ -69,6 +69,14 @@
         @敵[@i]を描く
     }
   }
+}
+
+---画面表示する{
+    {色:0}の背景色
+    {色:255}の塗りつぶし色
+    {色:255}の輪郭色
+    {x:0, y:0}に{幅:@幅, 高さ:@天井y}のシカク
+    {x:0, y:@床面y}に{幅:@幅, 高さ:@高さ}のシカク
 }
 
 ---クリック時{
@@ -82,7 +90,8 @@
    @速度は実数型
 
 +++星型{
-     初期化する
+    初期化する
+	@位置x = {下限:@幅, 上限：@幅 * 2}の乱数
   }
 
 ---移動する{
@@ -114,7 +123,8 @@
    @方向yは整数型
 
 +++敵型{
-     初期化する
+    初期化する
+	@位置x = {下限:@幅, 上限：@幅 * 2}の乱数
   }
 
 ---移動する{
@@ -138,7 +148,7 @@
     @位置x = @幅
     @位置y = {下限:@天井y, 上限：@床面y}の乱数
     @速度x = {上限:1}の乱数 + 1
-    @速度y = {上限:0.5}の乱数
+    @速度y = {上限:0.5}の乱数 + 0.2
 
     @方向y = 1
     もし{条件:{上限:10}の乱数 > 5}ならば{
