タイトルを追加。 上下にデザイン的なバーを追加

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -41,8 +41,8 @@
 
 ---初期設定する{
     {幅:300, 高さ:300}のサイズ
-    @天井y = 40
-    @床面y = @高さ - 60
+    @天井y = 60
+    @床面y = @高さ - 80
 
     {開始:@iは整数型 = 0 , 条件:@i < @星_個数 ,変化:@i += 1}のくりかえし{
         @星[@i] = 新しい星型
@@ -51,7 +51,9 @@
         @敵[@i] = 新しい敵型
     }
 
+    {色:0}の背景色
     画面表示する
+    {R:0, G:204, B:204}の塗りつぶし色
     {もじ:「>Click to Start!」}で{X:@幅 / 3 + 10, Y:@高さ / 2}にもじ表示する
 }
 
@@ -59,7 +61,7 @@
 
     もし{条件:@開始フラグ == @正}ならば{
     {色:0}の背景色
-    画面表示する
+
     {開始:@iは整数型 = 0 , 条件:@i < @星_個数 ,変化:@i += 1}のくりかえし{
         @星[@i]を移動する
         @星[@i]を描く
@@ -68,15 +70,23 @@
         @敵[@i]を移動する
         @敵[@i]を描く
     }
+    画面表示する
   }
 }
 
 ---画面表示する{
-    {色:0}の背景色
     {色:255}の塗りつぶし色
     {色:255}の輪郭色
-    {x:0, y:0}に{幅:@幅, 高さ:@天井y}のシカク
-    {x:0, y:@床面y}に{幅:@幅, 高さ:@高さ}のシカク
+    {x:0, y:0}に{幅:@幅, 高さ:@天井y - 25}のシカク
+    {x:0, y:@床面y + 35}に{幅:@幅, 高さ:@高さ}のシカク
+
+    {R:0, G:204, B:204}の塗りつぶし色
+    輪郭なし
+    {x:0, y:@天井y - 10}に{幅:@幅, 高さ:10}のシカク
+    {x:0, y:@床面y + 10}に{幅:@幅, 高さ:10}のシカク
+
+    {色:0}の塗りつぶし色
+    {もじ:「Space Tunnel」}で{X:@幅 / 3 + 10, Y:20}にもじ表示する
 }
 
 ---クリック時{
