画像表示に変更。
トロンっぽい、レトロフューチャな感じで。

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -28,16 +28,24 @@
 //Copyright 2012 Yutaka Kachi
 //MIT License
 
+/* @pjs preload="space_tunnel/dot.gif"; */
+/* @pjs preload="space_tunnel/enemy.gif"; */
+/* @pjs preload="space_tunnel/ship.gif"; */
+
 @開始フラグは正否型 = @否
 
 @天井yは整数型
 @床面yは整数型
 
-@星_個数は整数型 = 15
+@星_個数は整数型 = 20
 @星は星型[] = 新しい星型[@星_個数]
 
-@敵_個数は整数型 = 5
+@敵_個数は整数型 = 8
 @敵は敵型[] = 新しい敵型[@敵_個数]
+
+@星イメージはPイメージ型
+@敵イメージはPイメージ型
+@船イメージはPイメージ型
 
 ---初期設定する{
     {幅:300, 高さ:300}のサイズ
@@ -50,6 +58,10 @@
     {開始:@iは整数型 = 0 , 条件:@i < @敵_個数 ,変化:@i += 1}のくりかえし{
         @敵[@i] = 新しい敵型
     }
+
+    @星イメージ = {ファイル:「space_tunnel/dot.gif」}でイメージ読み込みする
+    @敵イメージ = {ファイル:「space_tunnel/enemy.gif」}でイメージ読み込みする
+    @船イメージ = {ファイル:「space_tunnel/ship.gif」}でイメージ読み込みする
 
     {色:0}の背景色
     画面表示する
@@ -112,9 +124,7 @@
   }
 
 ---描く{
-    {色:255}の塗りつぶし色
-    輪郭なし
-    {x:@位置x, y:@位置y}に{幅:3, 高さ:3}のシカク
+    {対象:@星イメージ}で{x:@位置x, y:@位置y}にイメージ表示する
   }
 
 ---初期化する{
@@ -139,7 +149,7 @@
 
 ---移動する{
      @位置x -= @速度x
-     もし{条件:@位置x <= 0}ならば{
+     もし{条件:@位置x <= -20}ならば{
          初期化する
      }
      @位置y += @方向y * @速度y
@@ -149,9 +159,7 @@
   }
 
 ---描く{
-    塗りつぶしなし
-    {色:255}の輪郭色
-    {x:@位置x, y:@位置y}に{幅:20, 高さ:20}のマル
+    {対象:@敵イメージ}で{x:@位置x, y:@位置y}にイメージ表示する
   }
 
 ---初期化する{
