上下バーの色合いを調整

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -87,16 +87,30 @@
 }
 
 ---画面表示する{
+
+	//上下の余白
     {色:255}の塗りつぶし色
     {色:255}の輪郭色
     {x:0, y:0}に{幅:@幅, 高さ:@天井y - 25}のシカク
-    {x:0, y:@床面y + 35}に{幅:@幅, 高さ:@高さ}のシカク
+    {x:0, y:@床面y + 25}に{幅:@幅, 高さ:@高さ}のシカク
 
-    {R:0, G:204, B:204}の塗りつぶし色
+	//上下のバー
+    {R:0, G:120, B:120}の塗りつぶし色
     輪郭なし
     {x:0, y:@天井y - 10}に{幅:@幅, 高さ:10}のシカク
-    {x:0, y:@床面y + 10}に{幅:@幅, 高さ:10}のシカク
+    {x:0, y:@床面y}に{幅:@幅, 高さ:10}のシカク
 
+	//バー上面の明るい線
+    {R:0, G:200, B:200}の輪郭色
+    {x:0, y:@天井y - 10}に{幅:@幅, 高さ:@天井y - 10}のセン
+    {x:0, y:@床面y}に{幅:@幅, 高さ:@床面y}のセン
+	
+	//バー下面の明るい線
+    {R:70, G:70, B:70}の輪郭色
+    {x:0, y:@天井y}に{幅:@幅, 高さ:@天井y}のセン
+    {x:0, y:@床面y + 10}に{幅:@幅, 高さ:@床面y + 10}のセン
+
+	//上部タイトル
     {色:0}の塗りつぶし色
     {もじ:「Space Tunnel」}で{X:@幅 / 3 + 10, Y:20}にもじ表示する
 }
@@ -153,7 +167,7 @@
          初期化する
      }
      @位置y += @方向y * @速度y
-     もし{条件:(@位置y >= @床面y) ||(@位置y <= @天井y)}ならば{
+     もし{条件:(@位置y >= @床面y - 14) ||(@位置y < @天井y)}ならば{
          @方向y *= -1
      }
   }
@@ -164,7 +178,7 @@
 
 ---初期化する{
     @位置x = @幅
-    @位置y = {下限:@天井y, 上限：@床面y}の乱数
+    @位置y = {下限:@天井y, 上限：@床面y - 14}の乱数
     @速度x = {上限:1}の乱数 + 1
     @速度y = {上限:0.5}の乱数 + 0.2
 
