船を表示。マウスコントロールをつけるが、動作はおかしい。

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -65,8 +65,8 @@
 
     {色:0}の背景色
     画面表示する
-    {R:0, G:204, B:204}の塗りつぶし色
-    {もじ:「>Click to Start!」}で{X:@幅 / 3 + 10, Y:@高さ / 2}にもじ表示する
+    {色:0}の塗りつぶし色
+    {もじ:「>Click to Start!」}で{X:@幅 / 3 + 10, Y:@床面y + 50}にもじ表示する
 }
 
 ---くり返し描画する{
@@ -83,6 +83,7 @@
         @敵[@i]を描く
     }
     画面表示する
+	船表示する
   }
 }
 
@@ -117,6 +118,17 @@
 
 ---クリック時{
     @開始フラグ = @正
+}
+
+---船表示する{
+    @クリック領域y = @床面y + 25
+    もし{条件:@マウスy < @クリック領域y}ならば{
+        @マウスy2 = @クリック領域y
+    } ちがえば {
+        @マウスy2 = @マウスy
+    }
+    @船位置y = @天井y + (@床面y - @天井y ) * (@マウスy2 - @床面y) / (@高さ  - @床面y)
+    {対象:@船イメージ}で{x:@マウスx - 20, y:@船位置y}にイメージ表示する
 }
 
 ===星型{
