船の動きを調整。
直感に従うようにした。

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -123,12 +123,12 @@
 ---船表示する{
     @クリック領域y = @床面y + 25
     もし{条件:@マウスy < @クリック領域y}ならば{
-        @マウスy2 = @クリック領域y
+        @マウスy2 = 0
     } ちがえば {
-        @マウスy2 = @マウスy
+        @マウスy2 = @マウスy - @クリック領域y
     }
-    @船位置y = @天井y + (@床面y - @天井y ) * (@マウスy2 - @床面y) / (@高さ  - @床面y)
-    {対象:@船イメージ}で{x:@マウスx - 20, y:@船位置y}にイメージ表示する
+    @船位置y =  @マウスy2 / (@高さ  - @クリック領域y) * (@床面y - 12 - @天井y ) + @天井y
+    {対象:@船イメージ}で{x:@マウスx, y:@船位置y}にイメージ表示する
 }
 
 ===星型{
