開始時の文字を目立たせる
文字の周辺領域が、操縦範囲になっているため。

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -65,7 +65,7 @@
 
     {色:0}の背景色
     画面表示する
-    {色:0}の塗りつぶし色
+    {R:255, G:0, B:0}の塗りつぶし色
     {もじ:「>Click to Start!」}で{X:@幅 / 3 + 10, Y:@床面y + 50}にもじ表示する
 }
 
@@ -112,7 +112,7 @@
     {x:0, y:@床面y + 10}に{幅:@幅, 高さ:@床面y + 10}のセン
 
 	//上部タイトル
-    {色:0}の塗りつぶし色
+    {R:0, G:120, B:120}の塗りつぶし色
     {もじ:「Space Tunnel」}で{X:@幅 / 3 + 10, Y:20}にもじ表示する
 }
 
