--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -66,7 +66,7 @@
     {色:0}の背景色
     画面表示する
     {R:255, G:0, B:0}の塗りつぶし色
-    {もじ:「>Click to Start!」}で{X:@幅 / 3 + 10, Y:@床面y + 50}にもじ表示する
+    {もじ:「>Click to Start!」}で{X:@幅 / 3 + 10, Y:@床面y + 60}にもじ表示する
 }
 
 ---くり返し描画する{
@@ -113,7 +113,7 @@
 
 	//上部タイトル
     {R:0, G:120, B:120}の塗りつぶし色
-    {もじ:「Space Tunnel」}で{X:@幅 / 3 + 10, Y:20}にもじ表示する
+    {もじ:「Space Tunnel」}で{X:@幅 / 3 + 10, Y:@床面y + 40}にもじ表示する
 }
 
 ---クリック時{
