トンネルの幅を、マウスの位置xに合わせて変える
後ろに下がると狭くする。

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -73,7 +73,8 @@
 
     もし{条件:@開始フラグ == @正}ならば{
     {色:0}の背景色
-
+    トンネル調整する
+	
     {開始:@iは整数型 = 0 , 条件:@i < @星_個数 ,変化:@i += 1}のくりかえし{
         @星[@i]を移動する
         @星[@i]を描く
@@ -129,6 +130,14 @@
     }
     @船位置y =  @マウスy2 / (@高さ  - @クリック領域y) * (@床面y - 12 - @天井y ) + @天井y
     {対象:@船イメージ}で{x:@マウスx, y:@船位置y}にイメージ表示する
+}
+---トンネル調整する{
+
+    @天井差分y = (@幅/2 - @マウスx) / @幅 * 30
+    @天井y = 60 + @天井差分y
+
+	@床面差分y = (@幅/2 - @マウスx) / @幅 * 30
+	@床面y = @高さ - 80 - @床面差分y
 }
 
 ===星型{
