タイトル位置を、やっぱり変更
下にあると、トンネルの太さで変わってしまう。

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -114,7 +114,7 @@
 
 	//上部タイトル
     {R:0, G:120, B:120}の塗りつぶし色
-    {もじ:「Space Tunnel」}で{X:@幅 / 3 + 10, Y:@床面y + 40}にもじ表示する
+    {もじ:「Space Tunnel」}で{X:@幅 / 3 + 10, Y:10}にもじ表示する
 }
 
 ---クリック時{
