トンネル範囲外では、星や敵が表示されないようにした
幅を変えたら、はみ出していた。

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -66,7 +66,7 @@
     {色:0}の背景色
     画面表示する
     {R:255, G:0, B:0}の塗りつぶし色
-    {もじ:「>Click to Start!」}で{X:@幅 / 3 + 10, Y:@床面y + 60}にもじ表示する
+    {もじ:「>> Click to Start! <<」}で{X:@幅 / 3 + 10, Y:@床面y + 60}にもじ表示する
 }
 
 ---くり返し描画する{
@@ -159,7 +159,9 @@
   }
 
 ---描く{
-    {対象:@星イメージ}で{x:@位置x, y:@位置y}にイメージ表示する
+    もし{条件:(@位置y >= @天井y)&&(@位置y <= @床面y)}ならば{
+        {対象:@星イメージ}で{x:@位置x, y:@位置y}にイメージ表示する
+    }
   }
 
 ---初期化する{
@@ -188,8 +190,11 @@
          初期化する
      }
      @位置y += @方向y * @速度y
-     もし{条件:(@位置y >= @床面y - 14) ||(@位置y < @天井y)}ならば{
-         @方向y *= -1
+     もし{条件:@位置y < @天井y}ならば{
+         @方向y = 1
+     }
+     もし{条件:@位置y > @床面y - 14}ならば{
+         @方向y = -1
      }
   }
 
