ドラッグエリアを表示する

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -115,6 +115,11 @@
 	//上部タイトル
     {R:0, G:120, B:120}の塗りつぶし色
     {もじ:「Space Tunnel」}で{X:@幅 / 3 + 10, Y:10}にもじ表示する
+
+    //ドラッグエリア
+    塗りつぶしなし
+    {R:0, G:200, B:200}の輪郭色
+    {x:5, y:@床面y + 30}に{幅:@幅 - 10, 高さ:@高さ - @床面y - 35 }のシカク
 }
 
 ---クリック時{
