--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -66,7 +66,7 @@
     {色:0}の背景色
     画面表示する
     {R:255, G:0, B:0}の塗りつぶし色
-    {もじ:「<Click to Start!>」}で{X:@幅 / 3, Y:@床面y + 60}にもじ表示する
+    {もじ:「<Click to Start!>」}で{X:@幅 / 3 + 5, Y:@床面y + 50}にもじ表示する
 }
 
 ---くり返し描画する{
@@ -113,7 +113,7 @@
     //ドラッグエリア
     塗りつぶしなし
     {R:0, G:200, B:200}の輪郭色
-    {x:5, y:@床面y + 30}に{幅:@幅 - 10, 高さ:@高さ - @床面y - 35 }のシカク
+    {x:5, y:@床面y + 20}に{幅:@幅 - 10, 高さ:@高さ - @床面y - 35 }のシカク
 }
 
 ---クリック時{
