トンネルの動きを調整

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -112,8 +112,8 @@
 
     //ドラッグエリア
     塗りつぶしなし
-    {R:0, G:200, B:200}の輪郭色
-    {x:5, y:@床面y + 20}に{幅:@幅 - 10, 高さ:@高さ - @床面y - 35 }のシカク
+    {R:0, G:120, B:120}の輪郭色
+    {x:10, y:@床面y + 20}に{幅:@幅 - 20, 高さ:@高さ - @床面y - 35 }のシカク
 }
 
 ---クリック時{
@@ -121,7 +121,7 @@
 }
 
 ---船表示する{
-    @クリック領域y = @床面y + 25
+    @クリック領域y = @床面y + 20
     もし{条件:@マウスy < @クリック領域y}ならば{
         @マウスy2 = 0
     } ちがえば {
@@ -135,7 +135,7 @@
     @天井差分y = (@幅/2 - @マウスx) / @幅 * 30
     @天井y = 60 + @天井差分y
 
-	@床面差分y = (@幅/2 - @マウスx) / @幅 * 30
+	@床面差分y = (@幅/2 - @マウスx) / @幅 * 40
 	@床面y = @高さ - 80 - @床面差分y
 }
 
@@ -166,7 +166,7 @@
 ---初期化する{
     @位置x = @幅
     @位置y = {下限:@天井y, 上限：@床面y}の乱数
-    @速度 = {上限:1}の乱数 + 1
+    @速度 = {上限:0.5}の乱数 + 0.5
   }
 }
 
@@ -194,6 +194,7 @@
      }
      もし{条件:@位置y > @床面y - 14}ならば{
          @方向y = -1
+		 @位置y = @床面y - 14
      }
   }
 
