引数のキャプションを変更
内容と違っていた

--- a/sample/basics/SoraMame_Sample_31.html
+++ b/sample/basics/SoraMame_Sample_31.html
@@ -36,9 +36,9 @@
 
 ---くり返し描画する{
   {色:255}の背景色
-  {対象:@豆A}で{幅:@幅 - @マウスX, 高さ:@マウスY}にイメージ表示する
-  {対象:@豆A}で{幅:@マウスX, 高さ:@高さ - @マウスY}にイメージ表示する
-  {対象:@豆A}で{幅:@幅 - @マウスX, 高さ:@高さ - @マウスY}にイメージ表示する
+  {対象:@豆A}で{位置x:@幅 - @マウスX, 位置y:@マウスY}にイメージ表示する
+  {対象:@豆A}で{位置x:@マウスX, 位置y:@高さ - @マウスY}にイメージ表示する
+  {対象:@豆A}で{位置x:@幅 - @マウスX, 位置y:@高さ - @マウスY}にイメージ表示する
 }
 </textarea><br />
 	<input type="button" value="わける" onclick="soramame_lex()" />
