スクリプトのパスが切れていた。

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -16,7 +16,7 @@
 	</style>
 	<link rel="stylesheet" href="styles/css/bootstrap-responsive.min.css">
 
-	<script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
+	<script src="styles/js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
 
 	<script type="text/javascript" src="./processing-1.4.1.js"></script>
 	<script type="text/javascript" src="./parse.js"></script>
@@ -178,7 +178,7 @@ function soramame_lex(){
       break;
     }
     sora.debug(type+": "+yylval);
-    if(i++ > 300){
+    if(i++ > 1000){
       break;
     }
   }
