デモ用htmlファイルを修正
サンプルリンクを追加。
公式Webは、リンクが間違っていた。

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -37,8 +37,9 @@
  				<a class="brand" href="#">Space Tunnel - SoraMame Script</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						<li class="active"><a href="http://www.catch.jp/wiki/edit.php?SoraMame.ps.js" target="_blannk">公式Web</a></li>
-					</ul>
+						<li class="active"><a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target="_blannk">公式Web</a></li>
+						<li class="active"><a href="http://www.catch.jp/wiki/?SoraMame.ps.js%2FSamples" target="_blannk">Samples</a></li>
+						</ul>
 				</div><!--/.nav-collapse -->
 			</div>
 		</div>
