--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>SoraMame Script</title>
+	<title>Simple demo - SoraMame Script</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
 
@@ -34,11 +34,12 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</a>
- 				<a class="brand" href="#">Sample - SoraMame Script</a>
+ 				<a class="brand" href="#">Simple demo</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						<li class="active"><a href="http://www.catch.jp/wiki/edit.php?SoraMame.ps.js" target="_blannk">公式Web</a></li>
-					</ul>
+						<li class="active"><a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target="_blannk">公式Web</a></li>
+						<li class="active"><a href="http://www.catch.jp/wiki/?SoraMame.ps.js%2FSamples" target="_blannk">Samples</a></li>
+						</ul>
 				</div><!--/.nav-collapse -->
 			</div>
 		</div>
