--- a/sample/demos/boid.html
+++ b/sample/demos/boid.html
@@ -37,7 +37,8 @@
  				<a class="brand" href="#">Boid - SoraMame Script</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						<li class="active"><a href="http://www.catch.jp/wiki/edit.php?SoraMame.ps.js" target="_blannk">公式Web</a></li>
+						<li class="active"><a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target="_blannk">公式Web</a></li>
+						<li class="active"><a href="http://www.catch.jp/wiki/?SoraMame.ps.js%2FSamples" target="_blannk">Samples</a></li>
 					</ul>
 				</div><!--/.nav-collapse -->
 			</div>
