--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Simple demo - SoraMame Script</title>
+	<title>Simple Demo - SoraMame Script</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
 
@@ -16,7 +16,7 @@
 	</style>
 	<link rel="stylesheet" href="styles/css/bootstrap-responsive.min.css">
 
-	<script src="styles/js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
+	<script src="./styles/js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
 
 	<script type="text/javascript" src="./processing-1.4.1.js"></script>
 	<script type="text/javascript" src="./parse.js"></script>
@@ -28,18 +28,18 @@
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<div class="navbar-inner">
-			<div class="container">
+			<div class="container-fluid">
 				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</a>
- 				<a class="brand" href="#">Simple demo</a>
+ 				<a class="brand" href="#">Simple Demo - SoraMame Script</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						<li class="active"><a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target="_blannk">公式Web</a></li>
-						<li class="active"><a href="http://www.catch.jp/wiki/?SoraMame.ps.js%2FSamples" target="_blannk">Samples</a></li>
-						</ul>
+						<li><a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target="_blannk">公式Web</a></li>
+						<li><a href="http://www.catch.jp/wiki/?SoraMame.ps.js%2FSamples" target="_blannk">Samples</a></li>
+					</ul>
 				</div><!--/.nav-collapse -->
 			</div>
 		</div>
@@ -87,6 +87,9 @@
 
 </html>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="./styles/js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+<script src="./styles/js/vendor/bootstrap.min.js"></script>
 
 <script type="text/javascript">
 <!--
