--- a/sample/demos/space_warp.html
+++ b/sample/demos/space_warp.html
@@ -28,7 +28,7 @@
 <body>
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<div class="navbar-inner">
-			<div class="container">
+			<div class="container-fluid">
 				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -37,8 +37,8 @@
  				<a class="brand" href="#">Space Warp - SoraMame Script</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						<li class="active"><a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target="_blannk">公式Web</a></li>
-						<li class="active"><a href="http://www.catch.jp/wiki/?SoraMame.ps.js%2FSamples" target="_blannk">Samples</a></li>
+						<li><a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target="_blannk">公式Web</a></li>
+						<li><a href="http://www.catch.jp/wiki/?SoraMame.ps.js%2FSamples" target="_blannk">Samples</a></li>
 					</ul>
 				</div><!--/.nav-collapse -->
 			</div>
@@ -192,6 +192,9 @@
 
 </html>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="../../styles/js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+<script src="../../styles/js/vendor/bootstrap.min.js"></script>
 
 <script type="text/javascript">
 <!--
