タイトル名を短くした
レスポンンシブWeb化したら、タイトル名が長すぎて2行になった。

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -34,7 +34,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</a>
- 				<a class="brand" href="#">Simple Demo - SoraMame Script</a>
+ 				<a class="brand" href="#">Simple Demo</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target="_blannk">公式Web</a></li>
