--- a/sample/basics/SoraMame_Sample_9.html
+++ b/sample/basics/SoraMame_Sample_9.html
@@ -1,10 +1,23 @@
-﻿<?xml version="1.0" encoding="EUC-JP"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja">
-
+﻿<!DOCTYPE html>
+<html class="no-js">
 <head>
-<meta charset="UTF-8">
-<title>SoraMame Script</title>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Basic Sample - SoraMame Script</title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width">
+
+	<link rel="stylesheet" href="../../styles/css/bootstrap.min.css">
+	<style>
+		body {
+			padding-top: 60px;
+			padding-bottom: 40px;
+		}
+	</style>
+	<link rel="stylesheet" href="../../styles/css/bootstrap-responsive.min.css">
+
+	<script src="./../../styles/js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
+
 	<script type="text/javascript" src="../../processing-1.4.1.js"></script>
 	<script type="text/javascript" src="../../parse.js"></script>
 	<script type="text/javascript" src="../../lib_command.js"></script>
@@ -12,18 +25,41 @@
 </head>
 
 
-<body onLoad="soramame_init()">
-<h1>SoraMame Script(そら豆スクリプト) - 日本語っぽいプログラミング言語</h1>
-日本語っぽいコードを、プログラミング言語Processing.jsに変換して実行します(SoraMame.ps.js)。
-<hr />
+<body>
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container-fluid">
+				<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</a>
+ 				<a class="brand" href="#">Basic Sample #9</a>
+				<div class="nav-collapse collapse">
+					<ul class="nav">
+						<li><a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target="_blannk">公式Web</a></li>
+						<li><a href="http://www.catch.jp/wiki/?SoraMame.ps.js%2FSamples" target="_blannk">Samples</a></li>
+					</ul>
+				</div><!--/.nav-collapse -->
+			</div>
+		</div>
+	</div>
 
-<table width="960px" heiht="320px" bgcolor="#eeeeee"><tbody><tr> 
-  <td width="320px" height="320px" bgcolor="white"> 
-		<canvas id="canvas0" width="320px" height="320px"></canvas> 
-  </td>	
-  <td>
-  <form name="compiledtext" id="compiledtext" onsubmit="return main()">
-	<textarea id="source" cols="80" rows="20">
+	<div class="container-fluid">
+		<!-- Example row of columns -->
+		<div class="row-fluid">
+			<div class="span5">
+				<canvas id="canvas0" width="310px" height="310px" style="border:dotted 1px lightgray"></canvas> 
+			</div>
+			<div class="span7">
+			<form name="compiledtext" id="compiledtext" onsubmit="return main()">
+				<div class="btn-group">
+					<button class="btn btn-small" type="button" onclick="soramame_exec()"><i class="icon-play" style="margin-top: 1px;"></i> うごかす</button>
+					<button class="btn btn-small" type="button" onclick="soramame_stop()"><i class="icon-stop" style="margin-top: 1px;"></i> とめる</button>
+					<button class="btn btn-small" type="button" onclick="soramame_lex()" >わける</button>
+					<button class="btn btn-small" type="button" onclick="soramame_parse()" >へんかん</button>
+				</div>
+				<textarea id="source" class="input-xxlarge" rows="10">
 //マウスの位置にマルかシカクを描く
 
 ---初期設定する{
@@ -49,27 +85,29 @@
 　　　}
   }
   {x:@マウスX, y:@マウスY}に{幅:10, 高さ:10}のマル
-}</textarea><br />
-	<input type="button" value="わける" onclick="soramame_lex()" />
-	<input type="button" value="へんかん" onclick="soramame_parse()" />
-	<input type="button" value="うごかす" onclick="soramame_exec()" />
-	<input type="button" value="とめる" onclick="soramame_stop()" />
-	<br />
-	<input type="file" id="myFile" onchange="file_open()" />
-	[<a href="#" id="download-link" >ほぞん</a>]
-	[<a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target='_blannk'>ヘルプ?</a>]
-  </form>
-  </td>
-  </tr></tbody></table>  
-<hr>
-<h2>変換結果</h2>
-<pre id="screen"></pre>
-
-<div id="result"></div> 
+}
+				</textarea>
+			</form>
+			</div>
+		</div>
+		<div class="row-fluid">
+			<div class="span12">
+				<h2>変換コード</h2>
+				<pre id="screen"></pre>
+				<div id="result"></div>
+		   </div>
+		</div>
+		<footer>
+			<p>&copy; Yutaka Kachi 2012</p>
+		</footer>
+	</div>
 </body>
 
 </html>
 
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="../../styles/js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+<script src="../../styles/js/vendor/bootstrap.min.js"></script>
 
 <script type="text/javascript">
 <!--
@@ -162,7 +200,7 @@ function soramame_lex(){
       break;
     }
     sora.debug(type+": "+yylval);
-    if(i++ > 300){
+    if(i++ > 1000){
       break;
     }
   }
@@ -185,35 +223,8 @@ function soramame_parse(){
   sora = new soramame(Esource.value);
   var script = yyparse();
   sora.debug(script);
- 
 }
 
-function soramame_init() {
-	if (window.File) {
-		//window.alert("File API OK.");
-	} else {
-		window.alert("このWebブラウザは、そら豆スクリプトに未対応かも。\n FirefoxやGoogleChromeなどをお試しください");
-	}
-}
-
-//テキストファイルを読み込む
-function file_open() {
-	var fileData = document.getElementById("myFile").files[0];	
-	var reader = new FileReader();
-	reader.onload = function(evt){
-		document.getElementById("source").innerHTML = evt.target.result; // 内容をページ上に表示         
-	}
-	reader.readAsText(fileData, "utf-8"); // 文字コードをUTF-8として読み込む
-}
-
-//テキストファイルを保存する
-window.onload = function() {
-	document.getElementById("download-link").addEventListener("click", function(){
-		var value = document.getElementById("source").innerHTML;
-		var href = "data:application/octet-stream," + encodeURIComponent(value);
-		this.setAttribute("href", href);
-	}, false);
-}
 //-->
 </script>
 
