タイトル表記を変更
間違えた。ファイル名と合わせる。

--- a/sample/demos/matrix_box.html
+++ b/sample/demos/matrix_box.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Box Matrix - SoraMame Script</title>
+	<title>Matrix Box - SoraMame Script</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width">
 
@@ -34,7 +34,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</a>
- 				<a class="brand" href="#">Box Matrix</a>
+ 				<a class="brand" href="#">Matrix Box</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target="_blank">公式Web</a></li>
