定数キーワードを@から$表記に変更
定数とキーワードを記法を追加した

--- a/sample/demos/matrix_box.html
+++ b/sample/demos/matrix_box.html
@@ -63,7 +63,7 @@
 // マウスの位置にハコを描く
 // WebGLが動作する環境が必要です
 ---初期設定する{
-  {幅:300, 高さ:300, モード:@P3D}のサイズ
+  {幅:300, 高さ:300, モード:$P3D}のサイズ
   {色:255}の輪郭色
 }
 
