サンプルプログラムの@PIを$PIに変更
定数表記に統一

--- a/sample/basics/SoraMame_Sample_32.html
+++ b/sample/basics/SoraMame_Sample_32.html
@@ -74,7 +74,7 @@
     座標覚える
     {開始:@jは整数型 = 0 , 条件:@j < 10 ,更新:@j=@j+1}のくりかえし{
           座標覚える
-          {角度:(@マウスX / @幅 * @PI  * 2)}で回転する
+          {角度:(@マウスX / @幅 * $PI  * 2)}で回転する
           @色変化は整数型 = @マウスY / @高さ * 100
           {赤:(@i * 10 + 130), 緑:@j * 10 - @色変化, 青:@j * 10 + @色変化}の塗りつぶし色
           {位置x:0, 位置y:0}に{幅:30, 高さ:30}のシカク
