--- a/sample/demos/matrix_box.html
+++ b/sample/demos/matrix_box.html
@@ -74,8 +74,8 @@
     座標覚える
     {開始:@jは整数型 = 0 , 条件:@j < 10 ,更新:@j=@j+1}のくりかえし{
        座標覚える
-       {角度:(@マウスX / @幅 * @PI)}でZ回転する
-       {角度:(@マウスY / @高さ * @PI)}でX回転する
+       {角度:(@マウスX / @幅 * $PI)}でZ回転する
+       {角度:(@マウスY / @高さ * $PI)}でX回転する
        @色変化Aは整数型 = @マウスX / @幅 * 100
        @色変化Bは整数型 = @マウスY / @高さ * 100
        {赤:(@i * 20 + @色変化A), 緑:@j * 10 - @色変化B, 青:@j * 10 + @色変化B}の塗りつぶし色
