--- a/sample/demos/space_warp.html
+++ b/sample/demos/space_warp.html
@@ -163,11 +163,11 @@
 	@円周1xは実数型 = (@サークル半径 + 2) * {角度:@角度x}のSin + @中心x
 	@円周1yは実数型 = (@サークル半径 + 2) * {角度:@角度x}のCos + @中心y
 
-	@頂点1axは実数型 = (@サークル半径 + 10) * {角度:(@角度x + @PI / 36)}のSin + @中心x
-	@頂点1ayは実数型 = (@サークル半径 + 10) * {角度:(@角度x + @PI / 36)}のCos + @中心x
+	@頂点1axは実数型 = (@サークル半径 + 10) * {角度:(@角度x + $PI / 36)}のSin + @中心x
+	@頂点1ayは実数型 = (@サークル半径 + 10) * {角度:(@角度x + $PI / 36)}のCos + @中心x
 
-	@頂点1bxは実数型 = (@サークル半径 + 10) * {角度:(@角度x - @PI / 36)}のSin + @中心x
-	@頂点1byは実数型 = (@サークル半径 + 10) * {角度:(@角度x - @PI / 36)}のCos + @中心x
+	@頂点1bxは実数型 = (@サークル半径 + 10) * {角度:(@角度x - $PI / 36)}のSin + @中心x
+	@頂点1byは実数型 = (@サークル半径 + 10) * {角度:(@角度x - $PI / 36)}のCos + @中心x
 
 	{色:255}の塗りつぶし色
 	{色:0}の輪郭色
