@TWO_PIも$表記にする
定数表記

--- a/sample/demos/space_warp.html
+++ b/sample/demos/space_warp.html
@@ -143,7 +143,7 @@
     }
 
 ---初期化する{
-	@角度 = {上限:@TWO_PI}の乱数
+	@角度 = {上限:$TWO_PI}の乱数
 	@距離 = {上限:1}の乱数
 	@経過時間 = 0.1
     }
@@ -158,7 +158,7 @@
 
 ---{位置:@xは実数型, 範囲:@lは実数型}で三角マーカー{
 
-	@角度xは実数型 = @x / @l * @TWO_PI
+	@角度xは実数型 = @x / @l * $TWO_PI
 
 	@円周1xは実数型 = (@サークル半径 + 2) * {角度:@角度x}のSin + @中心x
 	@円周1yは実数型 = (@サークル半径 + 2) * {角度:@角度x}のCos + @中心y
