@正と@否を$表記に
定数表記に統一

--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -68,7 +68,7 @@
 /* @pjs preload="space_tunnel/enemy.gif"; */
 /* @pjs preload="space_tunnel/ship.gif"; */
 
-@開始フラグは正否型 = @否
+@開始フラグは正否型 = $否
 
 @天井yは整数型
 @床面yは整数型
@@ -107,7 +107,7 @@
 
 ---くり返し描画する{
 
-    もし{条件:@開始フラグ == @正}ならば{
+    もし{条件:@開始フラグ == $正}ならば{
     {色:0}の背景色
     トンネル調整する
 	
@@ -153,7 +153,7 @@
 }
 
 ---クリック時{
-    @開始フラグ = @正
+    @開始フラグ = $正
 }
 
 ---船表示する{
