--- a/sample/basics/SoraMame_Sample_33.html
+++ b/sample/basics/SoraMame_Sample_33.html
@@ -34,7 +34,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</a>
- 				<a class="brand" href="#">Basic Sample #32</a>
+ 				<a class="brand" href="#">Basic Sample #33</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li><a href="http://www.catch.jp/wiki/?SoraMame.ps.js" target="_blannk">公式Web</a></li>
@@ -60,8 +60,8 @@
 					<button class="btn btn-small" type="button" onclick="soramame_parse()" >へんかん</button>
 				</div>
 				<textarea id="source" class="input-xxlarge" rows="10">
-//マウスに合わせて、マルを描く（色相-彩度-明度で色指定）
-//マウスの位置にマルを描く
+//マウスの位置にマルを描く（色相-彩度-明度で色指定）
+
 ---初期設定する{
   {幅:300, 高さ:300}のサイズ
   {指定:$HSB, 範囲:255}の色モード
