全角読点を助詞に登録
オブジェクトの記述に読点を使って、日本語っぽく

--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -168,6 +168,9 @@ function soramame_lex(){
 	case JOSI_HA:
       type = "JOSI_HA";
       break;
+	case JOSI_TEN:
+      type = "JOSI_TEN";
+      break;
 	case JOSI_NO:
       type = "JOSI_NO";
       break;
