サンプル中のオブジェクト表記を「を」から「、」に変更
オブジェクトの記述に読点を使って、日本語っぽく

--- a/sample/demos/boid.html
+++ b/sample/demos/boid.html
@@ -100,13 +100,13 @@
 
   {色:0}の背景色
   {開始:@iは整数型 = 0, 条件:@i < @ボイド数, 変化:@i+=1}のくりかえし{
-    @ボイド[@i]をベクトル初期化
+    @ボイド[@i]、ベクトル初期化
   }
 
   {開始:@iは整数型 = 0, 条件:@i < @ボイド数, 変化:@i+=1}のくりかえし{
-	@ボイド[@i]を判定する
-	@ボイド[@i]を移動する
-	@ボイド[@i]を描く
+	@ボイド[@i]、判定する
+	@ボイド[@i]、移動する
+	@ボイド[@i]、描く
   }
 }
 
@@ -171,7 +171,7 @@
 
 ---描く {
 	{位置:@位置x, 位置:@位置y}に{幅:@半径*2,高さ:@半径*2}のマル
-    ｛始点X：@位置x、始点y：@位置y｝と｛終点X：@位置x+@速度x*3、終点y：@位置y+@速度y*3｝にセン
+    ｛始点X：@位置x, 始点y：@位置y｝と｛終点X：@位置x+@速度x*3, 終点y：@位置y+@速度y*3｝にセン
   }
 
   //移動距離オブジェクトを初期化
@@ -334,6 +334,9 @@ function soramame_lex(){
       break;
 	case JOSI_HA:
       type = "JOSI_HA";
+      break;
+	case JOSI_TEN:
+      type = "JOSI_TEN";
       break;
 	case JOSI_NO:
       type = "JOSI_NO";
