--- a/sample/demos/colorfull_balls.html
+++ b/sample/demos/colorfull_balls.html
@@ -78,15 +78,15 @@
 ---くり返し描画する{
   フェードアウト
   {開始:@iは整数型 = 0 , 条件:@i <= @個数 ,変化:@i += 1}のくりかえし{
-    @ボール[@i]を移動する
+    @ボール[@i]、移動する
     {色相:(@i * 255 / @個数), 彩度:255, 明度:255, 透明:100}の塗りつぶし色
-    @ボール[@i]を描く
+    @ボール[@i]、描く
   }
 }
 
 ---フェードアウト{
   輪郭なし
-  {色:255, 透明:30}の塗りつぶし色
+  {色:255, 透明:95}の塗りつぶし色
   {x:0, y:0, 幅:@幅, 高さ:@高さ}のシカク
 }
 
