--- a/sample/demos/space_warp.html
+++ b/sample/demos/space_warp.html
@@ -99,7 +99,7 @@
 		輪郭なし
 		{x:@xx, y:@yy}に{幅:2, 高さ:2}のマル
 
-		@星0[@i]を移動する
+		@星0[@i]、移動する
 	}
 	{位置:@マウスx, 範囲:@幅}で三角マーカー
 	{位置:(@幅 - @マウスy), 範囲:@高さ}で三角マーカー
@@ -151,9 +151,9 @@
 
 ---メッセージ描く{
 	{色:0}の塗りつぶし色
-	{テキスト:「SPACE WARP」}で{x:5, y:10}にもじ表示する
-	{テキスト:@星0[1]の@角度}で{x:5, y:25}にもじ表示する
-	{テキスト:@星0[1]の@経過時間}で{x:40, y:25}にもじ表示する
+	{テキスト:「SPACE WARP」}を{x:5, y:10}にもじ表示する
+	{テキスト:@星0[1]の@角度}を{x:5, y:25}にもじ表示する
+	{テキスト:@星0[1]の@経過時間}を{x:40, y:25}にもじ表示する
 }
 
 ---{位置:@xは実数型, 範囲:@lは実数型}で三角マーカー{
