--- a/sample/demos/space_tunnel.html
+++ b/sample/demos/space_tunnel.html
@@ -102,7 +102,7 @@
     {色:0}の背景色
     画面表示する
     {R:255, G:0, B:0}の塗りつぶし色
-    {もじ:「<Click to Start!>」}で{X:@幅 / 3 + 5, Y:@床面y + 50}にもじ表示する
+    {もじ:「<Click to Start!>」}を{X:@幅 / 3 + 5, Y:@床面y + 50}にもじ表示する
 }
 
 ---くり返し描画する{
@@ -112,12 +112,12 @@
     トンネル調整する
 	
     {開始:@iは整数型 = 0 , 条件:@i < @星_個数 ,変化:@i += 1}のくりかえし{
-        @星[@i]を移動する
-        @星[@i]を描く
+        @星[@i]、移動する
+        @星[@i]、描く
     }
     {開始:@iは整数型 = 0 , 条件:@i < @敵_個数 ,変化:@i += 1}のくりかえし{
-        @敵[@i]を移動する
-        @敵[@i]を描く
+        @敵[@i]、移動する
+        @敵[@i]、描く
     }
     画面表示する
 	船表示する
@@ -144,7 +144,7 @@
 
 	//上部タイトル
     {R:0, G:255, B:255}の塗りつぶし色
-    {もじ:「Space Tunnel」}で{X:@幅 / 3 + 10, Y:30}にもじ表示する
+    {もじ:「Space Tunnel」}を{X:@幅 / 3 + 10, Y:30}にもじ表示する
 
     //ドラッグエリア
     塗りつぶしなし
