--- a/SoraMame_Script.html
+++ b/SoraMame_Script.html
@@ -171,12 +171,12 @@ function soramame_lex(){
 	case JOSI_TEN:
       type = "JOSI_TEN";
       break;
-	case JOSI_NO:
+	/* case JOSI_NO:
       type = "JOSI_NO";
-      break;
-	case JOSI_WO:
+      break; */
+	/* case JOSI_WO:
       type = "JOSI_WO";
-      break;
+      break; */
     case WORD:
       type = "WORD";
       break;
