サンプルファイル中の「わける」ボタンを、新しいトークンに対応
オブジェクトの記述に読点を使って、日本語っぽく

--- a/sample/demos/colorfull_balls.html
+++ b/sample/demos/colorfull_balls.html
@@ -222,12 +222,15 @@ function soramame_lex(){
 	case JOSI_HA:
       type = "JOSI_HA";
       break;
-	case JOSI_NO:
+	case JOSI_TEN:
+      type = "JOSI_TEN";
+      break;
+	/* case JOSI_NO:
       type = "JOSI_NO";
-      break;
-	case JOSI_WO:
+      break; */
+	/* case JOSI_WO:
       type = "JOSI_WO";
-      break;
+      break; */
     case WORD:
       type = "WORD";
       break;
