サンプルコードにまざっていた全角読点を半角コンマに修正
オブジェクトの記述に読点を使って、日本語っぽく

--- a/sample/lesson/SoraMame_lesson_31.html
+++ b/sample/lesson/SoraMame_lesson_31.html
@@ -30,7 +30,7 @@
 }
 
 ---くり返し描画する{
-  ｛始点X：0、始点y：0｝と｛終点X：@マウスX、終点y：@マウスy｝にセン
+  ｛始点X：0, 始点y：0｝と｛終点X：@マウスX, 終点y：@マウスy｝にセン
 }
 </textarea><br />
 	<input type="button" value="わける" onclick="soramame_lex()" />
