--- a/sample/lesson/SoraMame_lesson_32.html
+++ b/sample/lesson/SoraMame_lesson_32.html
@@ -30,7 +30,7 @@
 }
 
 ---くり返し描画する{
-  ｛X1：0、Y1：0｝と｛X2：100、Y2：100｝と｛X3：@マウスx、Y3：@マウスy｝にサンカク
+  ｛X1：0, Y1：0｝と｛X2：100, Y2：100｝と｛X3：@マウスx, Y3：@マウスy｝にサンカク
 }
 </textarea><br />
 	<input type="button" value="わける" onclick="soramame_lex()" />
