--- a/sample/lesson/SoraMame_lesson_34.html
+++ b/sample/lesson/SoraMame_lesson_34.html
@@ -30,7 +30,7 @@
 }
 
 ---くり返し描画する{
- {赤:255、緑:0、青:0}の輪郭色
+ {赤:255,緑:0,青:0}の輪郭色
  {x:@マウスX, y:@マウスY}に{幅:50, 高さ:50}のマル
  {x:@マウスX, y:@マウスY}に{幅:50, 高さ:50}のシカク
 }
