--- a/sample/practice/SoraMame_practice_31.html
+++ b/sample/practice/SoraMame_practice_31.html
@@ -30,7 +30,7 @@
 }
 
 ---くり返し描画する{
-   ｛X：150、Y：0｝に｛幅：@マウスX、高さ：@マウスY｝と{開始:0、終了:2}の円弧
+   ｛X：150, Y：0｝に｛幅：@マウスX, 高さ：@マウスY｝と{開始:0,終了:2}の円弧
 }</textarea><br />
 	<input type="button" value="わける" onclick="soramame_lex()" />
 	<input type="button" value="へんかん" onclick="soramame_parse()" />
