--- a/sample/practice/SoraMame_practice_32.html
+++ b/sample/practice/SoraMame_practice_32.html
@@ -28,12 +28,12 @@
 ---初期設定する{
   {幅:300, 高さ:300}のサイズ
   {白黒:255}の背景色
-  {赤:255、緑:0、青:0}の輪郭色
-  {赤:255、緑:0、青:0}の塗りつぶし色
+  {赤:255,緑:0,青:0}の輪郭色
+  {赤:255,緑:0,青:0}の塗りつぶし色
 }
 
 ---くり返し描画する{
-   ｛x：@マウスX、y：@マウスY｝に｛幅：10、高さ：10｝のマル
+   ｛x：@マウスX, y：@マウスY｝に｛幅：10, 高さ：10｝のマル
 }</textarea><br />
 	<input type="button" value="わける" onclick="soramame_lex()" />
 	<input type="button" value="へんかん" onclick="soramame_parse()" />
