--- a/sample/basics/SoraMame_Sample_5.html
+++ b/sample/basics/SoraMame_Sample_5.html
@@ -66,7 +66,7 @@
 }
 
 ---くり返し描画する{
-  {赤:@マウスX、緑:0、青:@マウスY}の背景色
+  {赤:@マウスX,緑:0,青:@マウスY}の背景色
   {x:150, y:150}に{幅:@マウスX, 高さ:@マウスY}のマル
 }
 				</textarea>
