--- a/sample/basics/SoraMame_Sample_6.html
+++ b/sample/basics/SoraMame_Sample_6.html
@@ -68,7 +68,7 @@
 ---くり返し描画する{
   {色:255}の背景色
   {幅:3}の輪郭幅
-  {赤:@マウスX、緑:0、青:@マウスY}の輪郭色
+  {赤:@マウスX,緑:0,青:@マウスY}の輪郭色
   {x:150, y:150}に{幅:@マウスX, 高さ:@マウスY}のマル
 }
 				</textarea>
