--- a/sample/lesson/SoraMame_lesson_35.html
+++ b/sample/lesson/SoraMame_lesson_35.html
@@ -30,8 +30,8 @@
 }
 
 ---くり返し描画する{
- {赤:255、緑:0、青:0}の輪郭色
- {赤:0、緑:0、青:255}の塗りつぶし色
+ {赤:255,緑:0,青:0}の輪郭色
+ {赤:0,緑:0,青:255}の塗りつぶし色
  {x:@マウスX, y:@マウスY}に{幅:50, 高さ:50}のマル
 }
 </textarea><br />
