引数の助詞に「を」を使う
オブジェクトの記述に読点を使って、日本語っぽくしたら、引数の助詞に「を」が使えるようになった

--- a/sample/basics/SoraMame_Sample_31.html
+++ b/sample/basics/SoraMame_Sample_31.html
@@ -67,14 +67,14 @@
 
 ---初期設定する{
   {幅:300, 高さ:300}のサイズ
-  @豆A = {ファイル:「sora-mame.png」}でイメージ読み込みする
+  @豆A = {ファイル:「sora-mame.png」}をイメージ読み込みする
 }
 
 ---くり返し描画する{
   {色:255}の背景色
-  {対象:@豆A}で{位置x:@幅 - @マウスX, 位置y:@マウスY}にイメージ表示する
-  {対象:@豆A}で{位置x:@マウスX, 位置y:@高さ - @マウスY}にイメージ表示する
-  {対象:@豆A}で{位置x:@幅 - @マウスX, 位置y:@高さ - @マウスY}にイメージ表示する
+  {画像:@豆A}を{位置x:@幅 - @マウスX, 位置y:@マウスY}にイメージ表示する
+  {画像:@豆A}を{位置x:@マウスX, 位置y:@高さ - @マウスY}にイメージ表示する
+  {画像:@豆A}を{位置x:@幅 - @マウスX, 位置y:@高さ - @マウスY}にイメージ表示する
 }
 				</textarea>
 			</form>
