--- a/sample/basics/SoraMame_Sample_30.html
+++ b/sample/basics/SoraMame_Sample_30.html
@@ -71,20 +71,20 @@
 @Xは整数型 = 30
 
 {色:20}の塗りつぶし色
-{文字:「古池や」｝で{x:@X, y:80}にもじ表示する
+{文字:「古池や」｝を{x:@X, y:80}にもじ表示する
 
 {色:180}の塗りつぶし色
-{文字:「蛙飛び込む」｝で{x:@X, y:140}にもじ表示する
+{文字:「蛙飛び込む」｝を{x:@X, y:140}にもじ表示する
 
 {色:210}の塗りつぶし色
-{文字:「水の音」｝で{x:@X, y:200}にもじ表示する
+{文字:「水の音」｝を{x:@X, y:200}にもじ表示する
 
 
 @フォントA = {フォント:「sans-serif」}でフォント読み込みする
 {フォント:@フォントA, サイズ:32}でフォント設定する
 
 {色:250}の塗りつぶし色
-{文字:「芭蕉」｝で{x:@X, y:250}にもじ表示する
+{文字:「芭蕉」｝を{x:@X, y:250}にもじ表示する
 				</textarea>
 			</form>
 			</div>
