* 引数の助詞に「を」を使う。修正もれ
オブジェクトの記述に読点を使って、日本語っぽくしたら、引数の助詞に「を」が使えるようになった

--- a/sample/basics/SoraMame_Sample_8.html
+++ b/sample/basics/SoraMame_Sample_8.html
@@ -68,7 +68,7 @@
 ---くり返し描画する{
 　　フェードアウト
   {赤：255,緑：0,青：0}の塗りつぶし色
-  {テキスト:「あいうえお」}で{x:@マウスX, y:@マウスY}にもじ表示する
+  {テキスト:「あいうえお」}を{x:@マウスX, y:@マウスY}にもじ表示する
 }
 
 ---フェードアウト{
