オブジェクトの記述を「を」から「、」に修正
サンプルの修正もれ

--- a/sample/basics/SoraMame_Sample_11.html
+++ b/sample/basics/SoraMame_Sample_11.html
@@ -72,8 +72,8 @@
 
 ---くり返し描画する{
   フェードアウト
-  @ボールを移動する
-  @ボールを描く
+  @ボール、移動する
+  @ボール、描く
 
   {色：255}の塗りつぶし色
   {テキスト:@ボールの@位置x}で{x:0, y:15}にもじ表示する
