--- a/sample/basics/SoraMame_Sample_12.html
+++ b/sample/basics/SoraMame_Sample_12.html
@@ -76,8 +76,8 @@
 ---くり返し描画する{
   フェードアウト
   {開始:@iは整数型 = 0 , 条件:@i < 3 ,変化:@i += 1}のくりかえし{
-    @ボール[@i]を移動する
-    @ボール[@i]を描く
+    @ボール[@i]、移動する
+    @ボール[@i]、描く
   }
 }
 
