--- a/sample/demos/particles.html
+++ b/sample/demos/particles.html
@@ -130,7 +130,7 @@
 		   </div>
 		</div>
 		<footer>
-			<p>&copy; Yutaka Kachi 2012</p>
+			<p>&copy; Yutaka Kachi 2012 - 2013</p>
 		</footer>
 	</div>
 </body>
