ボールが床でバウンドする
デモの動きを派手にした

--- a/sample/demos/particles.html
+++ b/sample/demos/particles.html
@@ -93,6 +93,7 @@
 	@yは実数型
 	@vxは実数型
 	@vyは実数型
+	@回数は整数型
 
 	+++ボール型{
 		初期化する
@@ -101,10 +102,17 @@
 	---移動する{
 		@x += @vx
 		@y += @vy
-		もし{条件:@y > @高さ}ならば{
-			初期化する
-		}
 		@vy += 0.5
+
+		もし{条件:@y > @高さ}ならば{
+			もし{条件:@回数 > 0}ならば{
+				@回数 -= 1
+				@vy = -6 * @回数
+			}ちがえば{
+				初期化する
+			｝
+		}
+
 	}
 			
 	---描く{
@@ -116,6 +124,7 @@
 		@y = 100
 		@vx = {下限：-3, 上限:3}の乱数
 		@vy = ({上限：6}の乱数 + 2) * -1
+		@回数 = 3
 	}
 }
 				</textarea>
