マウスの位置にあわせて、ボールの方向をかえる
デモを、より派手にする

--- a/sample/demos/particles.html
+++ b/sample/demos/particles.html
@@ -61,6 +61,7 @@
 				</div>
 				<textarea id="source" class="input-xxlarge" rows="10">
 //簡易パーティクル：カラフルな複数ボールの落下
+//マウスの位置にあわせて、ボールの方向を変える
 
 @個数は整数型 = 50
 @ボール管理は配列リスト型 = 新しい配列リスト型
@@ -107,7 +108,7 @@
 		もし{条件:@y > @高さ}ならば{
 			もし{条件:@回数 > 0}ならば{
 				@回数 -= 1
-				@vy = -6 * @回数
+				@vy = -5 * @回数
 			}ちがえば{
 				初期化する
 			｝
@@ -122,7 +123,7 @@
 	---初期化する{
 		@x = @幅 / 2
 		@y = 100
-		@vx = {下限：-3, 上限:3}の乱数
+		@vx = ({下限：-3, 上限:3}の乱数) + ((@マウスx - @幅/2) / @幅 * 6)
 		@vy = ({上限：6}の乱数 + 2) * -1
 		@回数 = 3
 	}
