カベで反射
デモをさらにさらに派手にする

--- a/sample/demos/particles.html
+++ b/sample/demos/particles.html
@@ -105,6 +105,12 @@
 		@y += @vy
 		@vy += 0.5
 
+		もし{条件:@x <= 0}ならば{
+			@vx *= -1
+		}
+		もし{条件:@x >= @幅}ならば{
+			@vx *= -1
+		}
 		もし{条件:@y > @高さ}ならば{
 			もし{条件:@回数 > 0}ならば{
 				@回数 -= 1
@@ -123,7 +129,7 @@
 	---初期化する{
 		@x = @幅 / 2
 		@y = 100
-		@vx = ({下限：-2, 上限:2}の乱数) + ((@マウスx - @幅/2) / @幅 * 3)
+		@vx = ({下限：-2, 上限:2}の乱数) + ((@マウスx - @幅/2) / @幅 * 6)
 		@vy = ({上限：6}の乱数 + 2) * -1
 		@回数 = 5
 	}
