コードを整理した

--- a/sample/demos/orbit.html
+++ b/sample/demos/orbit.html
@@ -61,26 +61,26 @@
 				</div>
 				<textarea id="source" class="input-xxlarge" rows="10">
 // オービット：マウスの位置にあわせて、マルが周回する
-// Inspired by hakim's "Trail Fader"
+// Port from hakim's "Trail Fader"
 
 @個数は整数型 = 10
 @ボール管理は配列リスト型 = 新しい配列リスト型
 
 ---初期設定する{
-  {幅:300, 高さ:300}のサイズ
-  {指定:$HSB, 範囲:255}の色モード
-  輪郭なし
+	{幅:300, 高さ:300}のサイズ
+	{指定:$HSB, 範囲:255}の色モード
+	輪郭なし
+	{開始:@iは整数型 = @個数 , 条件:@i >= 0  ,更新:@i -=1}のくりかえし{
+		@ボール１はボール型　 = 新しい{番号:@i}のボール型
+		@ボール管理、{新規:@ボール１}を足す
+	}
 }
 
 ---くり返し描画する{
   フェードアウト
-  もし{条件:@ボール管理、サイズ <= @個数}ならば{
-    @ボール１はボール型　 = 新しいボール型
-    @ボール管理、{新規:@ボール１}を足す
-  }
 
-  {開始:@iは整数型 = (@ボール管理、サイズ) - 1 , 条件:@i > 0  ,更新:@i -=1}のくりかえし{
-    @ボール１ = @ボール管理、{番号:@i}を取りだし
+  {開始:@iは整数型 = @個数 , 条件:@i >= 0  ,更新:@i -=1}のくりかえし{
+    @ボール１はボール型 = @ボール管理、{番号:@i}を取りだし
     @ボール１、移動する
     @ボール１、描く
    }
@@ -94,9 +94,10 @@
 
 //ボール型の定義
 ===ボール型{
+	@番号は整数型
 	@xは実数型
 	@yは実数型
-	@lは実数型
+	@半径は実数型
 	@vyは実数型
 	@vlは実数型
 	@カラーは整数型
@@ -105,11 +106,17 @@
 	@角速度は実数型
 	@追従度は実数型
 
-
-
-	+++ボール型{
-		初期化する
-		}
+	+++{id: @idは整数型}のボール型{
+		@番号 = @id
+		@x = @マウスX
+		@y = @マウスy
+		@半径 = {上限:1}の乱数 * 30 + 30
+		@カラー =  255 / @個数 * @番号 //{上限:255}の乱数
+		@ボールサイズ = {上限:5}の乱数 + 5
+		@角度 = {上限:$TWO_PI}の乱数
+		@角速度 = $TWO_PI /({上限:40}の乱数 +60)
+		@追従度 = {上限:0.15}の乱数 +0.03
+	}
 
 	---移動する{
 		@x += (@マウスX - @x) * @追従度
@@ -125,19 +132,8 @@
 		座標覚える
 		{x:@x, y:@y}に座標移動する
 		{角度:(@角度)}で回転する
-		{x:0, y:@l}に{幅:@ボールサイズ, 高さ:@ボールサイズ}のマル
+		{x:0, y:@半径}に{幅:@ボールサイズ, 高さ:@ボールサイズ}のマル
 		座標もどす
-	}
-	
-	---初期化する{
-		@x = @マウスX
-		@y = @マウスy
-		@l = {上限:1}の乱数 * 30 + 30
-		@カラー =  {上限:255}の乱数
-		@ボールサイズ = {上限:5}の乱数 + 5
-		@角度 = {上限:$TWO_PI}の乱数
-		@角速度 = $TWO_PI /({上限:30}の乱数 +70)
-		@追従度 = {上限:0.15}の乱数 +0.03
 	}
 }
 				</textarea>
