パラメータを調整

--- a/sample/demos/orbit.html
+++ b/sample/demos/orbit.html
@@ -62,6 +62,7 @@
 				<textarea id="source" class="input-xxlarge" rows="10">
 // オービット：マウスの位置にあわせて、マルが周回する
 // Port from hakim's "Trail Fader"
+// http://hakim.se/experiments/
 
 @個数は整数型 = 10
 @ボール管理は配列リスト型 = 新しい配列リスト型
@@ -88,7 +89,7 @@
 
 ---フェードアウト{
   輪郭なし
-  {色:0, 透明:20}の塗りつぶし色
+  {色:0, 透明:10}の塗りつぶし色
   {x:0, y:0, 幅:@幅, 高さ:@高さ}のシカク
 }
 
@@ -111,11 +112,11 @@
 		@x = @マウスX
 		@y = @マウスy
 		@半径 = {上限:1}の乱数 * 30 + 30
-		@カラー =  255 / @個数 * @番号 //{上限:255}の乱数
-		@ボールサイズ = {上限:5}の乱数 + 5
+		@カラー =  255 / @個数 * @番号
+		@ボールサイズ = {上限:4}の乱数 + 3
 		@角度 = {上限:$TWO_PI}の乱数
-		@角速度 = $TWO_PI /({上限:40}の乱数 +60)
-		@追従度 = {上限:0.15}の乱数 +0.03
+		@角速度 = $TWO_PI /({上限:8}の乱数 * 10 + 100)
+		@追従度 = {上限:0.02}の乱数 +0.03
 	}
 
 	---移動する{
