・各サンプルの「わける」ボタンを、もどる命令に対応 ・デモの「わける」ボタンが機能しなくなっていたのを改修

--- a/sample/basics/SoraMame_Sample_20.html
+++ b/sample/basics/SoraMame_Sample_20.html
@@ -16,7 +16,7 @@
 	</style>
 	<link rel="stylesheet" href="../../styles/css/bootstrap-responsive.min.css">
 
-	<script src="./../../styles/js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
+	<script src="../../styles/js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
 
 	<script type="text/javascript" src="../../processing-1.4.1.js"></script>
 	<script type="text/javascript" src="../../parse.js"></script>
@@ -328,6 +328,9 @@ function soramame_lex(){
       break;
 	case NEW:
       type = "NEW";
+      break;
+	case RET:
+      type = "RET";
       break;
 	case JOSI:
       type = "JOSI";
