--- a/sample/basics/SoraMame_Sample_31.html
+++ b/sample/basics/SoraMame_Sample_31.html
@@ -170,6 +170,9 @@ function soramame_lex(){
 	case NEW:
       type = "NEW";
       break;
+	case RET:
+      type = "RET";
+      break;
 	case JOSI:
       type = "JOSI";
       break;
