--- a/sample/basics/SoraMame_Sample_9b.html
+++ b/sample/basics/SoraMame_Sample_9b.html
@@ -165,6 +165,9 @@ function soramame_lex(){
 	case NEW:
       type = "NEW";
       break;
+	case RET:
+      type = "RET";
+      break;
 	case JOSI:
       type = "JOSI";
       break;
