--- a/sample/lesson/SoraMame_lesson_46.html
+++ b/sample/lesson/SoraMame_lesson_46.html
@@ -145,6 +145,9 @@ function soramame_lex(){
 	case NEW:
       type = "NEW";
       break;
+	case RET:
+      type = "RET";
+      break;
 	case JOSI:
       type = "JOSI";
       break;
