オブジェクトのNEW文を数式内にかけるようにした サンプルも修正

--- a/sample/demos/firework.html
+++ b/sample/demos/firework.html
@@ -76,12 +76,11 @@
 ---くり返し描画する{
   フェードアウト
   もし{条件:@ボール管理、サイズ <= @個数}ならば{
-    @ボール１はボール型　 = 新しいボール型
-    @ボール管理、{新規:@ボール１}を足す
+    @ボール管理、{新規:新しいボール型}を足す
   }
 
   {開始:@iは整数型 = @ボール管理、サイズ - 1 , 条件:@i > 0  ,更新:@i -=1}のくりかえし{
-    @ボール１ = @ボール管理、{番号:@i}を取りだし
+    @ボール１はボール型 = @ボール管理、{番号:@i}を取りだし
     @ボール１、移動する
     @ボール１、描く
    }
@@ -117,7 +116,7 @@
 	}
 			
 	---描く{
-		{H:(@タイム / 3 + 10), S:255 - @タイム, B:255, T:255 - @タイム}の塗りつぶし色
+		{H:(@タイム / 2 + 5), S:255 - @タイム*2, B:255, T:255 - @タイム}の塗りつぶし色
 		{x:@x, y:@y}に{幅:10, 高さ:10}のマル
 	}
 	
