--- a/sample/demos/particles.html
+++ b/sample/demos/particles.html
@@ -76,12 +76,11 @@
 ---くり返し描画する{
   {色:255}の背景色
   もし{条件:@ボール管理、サイズ <= @個数}ならば{
-    @ボール１はボール型　 = 新しいボール型
-    @ボール管理、{新規:@ボール１}を足す
+    @ボール管理、{新規:新しいボール型}を足す
   }
 
   {開始:@iは整数型 = 0 , 条件:@i < @ボール管理、サイズ - 1 ,更新:@i=@i+1}のくりかえし{
-    @ボール１ = @ボール管理、{番号:@i}を取りだし
+    @ボール１はボール型 = @ボール管理、{番号:@i}を取りだし
     @ボール１、移動する
 	{色相:(@i * 255 / @個数), 彩度:255, 明度:255, 透明:120}の塗りつぶし色
     @ボール１、描く
