デモを修正
NEW文を数式内に入れる

--- a/sample/demos/orbit.html
+++ b/sample/demos/orbit.html
@@ -72,8 +72,7 @@
 	{指定:$HSB, 範囲:255}の色モード
 	輪郭なし
 	{開始:@iは整数型 = @個数 , 条件:@i >= 0  ,更新:@i -=1}のくりかえし{
-		@ボール１はボール型　 = 新しい{番号:@i}のボール型
-		@ボール管理、{新規:@ボール１}を足す
+		@ボール管理、{新規:新しい{番号:@i}のボール型}を足す
 	}
 }
 
